# rs-openads

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  subl  test.xml
configuration/execution/: exec
configuration/log/: log_config.yaml
configuration/models/: elephant.config  scad_elephantnn_model.pt
configuration/storage/: registry.toml
crates/oads_camera/: Cargo.toml
crates/oads_camera/src/: camera.rs  info.rs  lib.rs  read.rs  scan.rs  storage.rs  vision.rs
crates/oads_camera/src/bench/: capture.rs
crates/oads_camera/src/data/: info.rs  mod.rs  read.rs
crates/oads_camera/src/process/: execution.rs  mod.rs  processing.rs
crates/oads_log/: Cargo.toml
crates/oads_log/config/: log_config.yaml
crates/oads_log/src/: lib.rs  syslog.rs
crates/oads_models/: ABOUT.md  Cargo.toml
crates/oads_models/src/: lib.rs  models.rs
crates/oads_models/src/elephant/: config.rs  mod.rs  model.rs
crates/oads_storage/: Cargo.toml
crates/oads_storage/src/: containers.rs  lib.rs  storage.rs
scripts/installation/: install.py  test.py
scripts/startup/: startup.py  storage.py
src/: main.rs
