[workspace]
members = [
    "crates/oads_log",
    "crates/oads_camera",
]

[package]
name = "openads-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
oads_log     = { path="./crates/oads_log",     version="0.1.0" }
oads_camera  = { path="./crates/oads_camera",  version="0.1.0" }


[[bin]]
name = "openads"
path = "src/main.rs"
