[package]
name = "oads_camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
v4l = "0.13.0"
rusb = "0.9.1"
chrono = "0.4.19"
failure = "0.1.8"
filesize = "0.2.0"
jpeg-decoder = "0.2.6"
serde_derive = "1.0.137"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "1.1.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
] }
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.22", features = [ "serialize" ] }
# nokhwa = { version="0.9.4", features = ["input-v4l", "input-ipcam"] }
